# mlops_learn

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
mlops_learn/: __init__.py  dataset.py  features.py  plots.py
mlops_learn/modeling/: predict.py  train.py
